2010-02-19  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-window-manager.c,
	matchbox/core/mb-wm-client-window.c, matchbox/core/mb-wm-atoms.c: Add
	support for new property _HILDON_LIVE_DESKTOP_BACKGROUND.

2010-02-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_wm_sync)
	* matchbox/core/mb-wm-main-context.c (mb_wm_list_remove_deleted_handlers):
	  Removed some g_debug()s.

2010-02-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.87

2010-02-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137235 - Transparent menu corners

	* matchbox/client-types/mb-wm-client-menu.c: Create decor for menus, 
	  deal with decor when working out sizes.
	* matchbox/theme-engines/mb-wm-theme-xml.c/h: Add image_filename field
	  into decor
	* matchbox/theme-engines/mb-wm-theme.c: handle loading of img as an
	  XML entity in 'Client', and sort out paths.	
	  
2010-02-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.86

2010-01-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Related to NB#151877 - title bar is blank for ordinary X applications

	* matchbox/core/mb-wm-client.[ch]
	(mb_wm_client_is_geometry_requested): New function to check if the
	client has been resized already.
	(mb_wm_client_set_unmap_confirmed, mb_wm_client_set_map_confirmed):
	Set attribute "hidden" because these are internal to the library.

2010-01-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	When a landscape fullscreen window is mapped in portrait,
	set its geometry to 800x480 straight away, like we do to
	non-fullscreen windows.

	* matchbox/core/mb-window-manager.h (mb_wm_get_display_geometry)
	* matchbox/core/mb-window-manager.c (mb_wm_get_display_geometry):
	  Take an additional @use_layout_flag parameter whether to take
	  MBWindowManagerFlagLayoutRotated into account if it's set.
	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_update):
	  Use it, for layout_fullscreen() as well.