@@ -1,3 +1,8 @@
+2010-02-19  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	* matchbox/client-types/mb-wm-client-menu.c:
+	Make sure that menus always stay fully on the screen
+
 2010-02-19  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	* matchbox/core/mb-window-manager.c,
